tests/baselines/reference/detachedCommentAtStartOfFunctionBody2.errors.txt
tests/cases/compiler/detachedCommentAtStartOfFunctionBody2.ts(7,37): error TS2339: Property 'name' does not exist on type 'TestFile'.


==== tests/cases/compiler/detachedCommentAtStartOfFunctionBody2.ts (1 errors) ====
    class TestFile {
        foo(message: string): () => string {
            /// <summary>Test summary</summary>
            /// <param name="message" type="String" />
            /// <returns type="Function" />
    
            return () => message + this.name;
                                        ~~~~
!!! error TS2339: Property 'name' does not exist on type 'TestFile'.
        }
    }